Closed Bug 1733398 Opened 3 years ago Closed 3 years ago

Low contrast in the text on the URL bar with the Alpenglow theme

Categories

(Firefox :: Theme, defect)

Firefox 94
defect

Tracking

()

RESOLVED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 --- unaffected
firefox94 --- fixed

People

(Reporter: alex_mayorga, Assigned: emilio)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(3 files)

¡Hola y'all!

Happy 🌮 Thursday!

Seems like when selecting text in the Awesome bar now the contrast is not great.

¡Gracias!
Alex

Attached image image.png
Attached image image.png

came across this bug today when testing nightly 94 on windows 10
It shows the same when i enable the search bar in toolbar.

Nightly is affected.
Beta93 and Release 92.0.1 are not

thanks for opening it.

For my own reference this is what I came up with to unblend the semi-transparent highlight color:

function unblendChannel(bg, fg, targetAlpha) {
  return (fg * 255 - bg * (255 - targetAlpha)) / targetAlpha 
}
Assignee: nobody → emilio

This does the same as Android and macOS (using a semi-transparent
highlight background, and currentColor for the foreground).

This is really sort of a theming issue (where the theme
mixes system colors with theme colors).

But leaving the existing selection color is prettier
even in the dark theme, so let's do that.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/09e0a0961e16 Use subtler dark selection colors. r=mstange
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch

Last good revision: edb7b0ca847baac1ebc8c79f056c4ee08d0a480f
First bad revision: e6687d345d537ca669921fa18cc72e399b6a83b2
Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=edb7b0ca847baac1ebc8c79f056c4ee08d0a480f&tochange=e6687d345d537ca669921fa18cc72e399b6a83b2

Could someone mark this as Regressed by bug 1731678

Regressed by: 1731678
Has Regression Range: --- → yes
QA Whiteboard: [qa-94b-p2]

Set release status flags based on info from the regressing bug 1731678

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: